k8s-resources/dobroveanu-cloud/pizza/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dobroveanu-cloud-pizza
  namespace: dobroveanu-cloud
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.pizza.dobroveanu.cloud`)
      kind: Rule
      services:
        - name: dobroveanu-cloud-pizza
          port: 80
          namespace: dobroveanu-cloud
    - match: Host(`pizza.dobroveanu.cloud`)
      kind: Rule
      services:
        - name: dobroveanu-cloud-pizza
          port: 80
          namespace: dobroveanu-cloud
  tls:
    secretName: dobroveanu-cloud-tls
